Actualización index.html
Agregando imágenes y titulares nuevos.
Reparación de carrusel de equipos.
Corrección de pequeños detalles visuales.

--- a/index.html
+++ b/index.html
@@ -288,9 +288,9 @@
               Fútbol
             </a>
             <div class="dropdown-menu bg-dark " aria-labelledby="navbarDropdown">
-              <a class="dropdown-item text-white font-weight-bold" href="#">1</a>
-              <a class="dropdown-item text-white font-weight-bold" href="#">2</a>
-              <a class="dropdown-item text-white font-weight-bold" href="#">3</a>
+              <a class="dropdown-item text-white font-weight-bold" href="#">Liga MX</a>
+              <a class="dropdown-item text-white font-weight-bold" href="#">Liga de Expansión</a>
+              <a class="dropdown-item text-white font-weight-bold" href="#">Copa MX</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -299,9 +299,9 @@
               Fútbol Internacional
             </a>
             <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item text-white font-weight-bold" href="#">a</a>
-              <a class="dropdown-item text-white font-weight-bold" href="#">b</a>
-              <a class="dropdown-item text-white font-weight-bold" href="#">c</a>
+              <a class="dropdown-item text-white font-weight-bold" href="#">LaLiga Santander</a>
+              <a class="dropdown-item text-white font-weight-bold" href="#">Liga SmartBank</a>
+              <a class="dropdown-item text-white font-weight-bold" href="#">Premier League</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -310,9 +310,9 @@
               Motor
             </a>
             <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item text-white font-weight-bold" href="#">x</a>
-              <a class="dropdown-item text-white font-weight-bold" href="#">y</a>
-              <a class="dropdown-item text-white font-weight-bold" href="#">z</a>
+              <a class="dropdown-item text-white font-weight-bold" href="#">F1</a>
+              <a class="dropdown-item text-white font-weight-bold" href="#">Nascar</a>
+              <a class="dropdown-item text-white font-weight-bold" href="#">IndieCar</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -321,19 +321,27 @@
               Otros deportes
             </a>
             <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item text-white font-weight-bold" href="#">a</a>
-              <a class="dropdown-item text-white font-weight-bold" href="#">e</a>
-              <a class="dropdown-item text-white font-weight-bold" href="#">i</a>
+              <a class="dropdown-item text-white font-weight-bold" href="#">Béisbol</a>
+              <a class="dropdown-item text-white font-weight-bold" href="#">Natación</a>
+              <a class="dropdown-item text-white font-weight-bold" href="#">Ciclismo</a>
             </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link text-white font-weight-bold" href="#">Más +</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-white font-weight-bold" href="#" id="navbarDropdown" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Más+
+            </a>
+            <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item text-white font-weight-bold" href="#">Lo + Trending</a>
+              <a class="dropdown-item text-white font-weight-bold" href="#">Tecnología</a>
+              <a class="dropdown-item text-white font-weight-bold" href="#">Actualidad</a>
+            </div>
           </li>
         </ul>
 
         <form class="form-inline ml-auto mr-5 my-lg-0">
 
-          <input class="form-control mr-sm-2" type="search" placeholder="Busca en Marca 🔎 " aria-label="Search">
+          <input class="form-control mr-sm-2" type="search" placeholder="Buscar en Marca      🔎" aria-label="Search">
         </form>
       </div>
 
@@ -371,7 +379,7 @@
       <a><img src="6juarez.png" alt="juarez" width="30"></a>
       <a><img src="7leon.png" alt="leon" width="30"></a> 
       <a><img src="8mazatlan.png" alt="mazatlan" width="30"></a>
-      <a><img src="9monterrey.png" alt="monterrey" width="30"></a>
+      <!-- <a><img src="9monterrey.png" alt="monterrey" width="30"></a> -->
              </div>
                 </div>
 
@@ -385,7 +393,7 @@
       <a><img src="15santos.png" alt="santos" width="30"></a>
       <a><img src="16tigres.png" alt="tigres" width="30"></a>
       <a><img src="17xolos.png" alt="xolos" width="30"></a>
-      <a><img src="18toluca.png" alt="toluca" width="30"></a>
+      <!-- <a><img src="18toluca.png" alt="toluca" width="30"></a> -->
                   </div>
                 </div>
               </div>
@@ -643,7 +651,7 @@
             <div class="row">
               <div class="col-md-7 col-lg-8">
                 <div class="card border-0" href="#xd">
-                  <img class="card-img-top" src="img1.jpg" alt="Card image
+                  <img class="card-img-top" src="1.jpg" alt="Card image
                       cap">
                   <span class="badge text-white" style="background-color: #ca0612;">HOT NEWS</span>
                   <div class="card-body">
@@ -666,7 +674,7 @@
                           RAZÓN #1</b2>
                       </div>
                       <div class="col-md-4 col-sm-6 col-6 ">
-                        <img src="small1.webp" alt="" style="max-height: auto;
+                        <img src="15.jpg" alt="" style="max-height: auto;
                             max-width: 100%;">
                       </div>
                     </div>
@@ -681,7 +689,7 @@
                           LO HICIERON DE NUEVO!</b2>
                       </div>
                       <div class="col-md-4 col-sm-6 col-6">
-                        <img src="small1.webp" alt="" style="max-height: auto;
+                        <img src="16.jpg" alt="" style="max-height: auto;
                             max-width: 100%;">
                       </div>
                     </div>
@@ -689,13 +697,11 @@
                   <li class="list-group-item bg-light border-0 my-2">
                     <div class="row align-items-center">
                       <div class="col-md-8 col-sm-6 col-6 pr-1">
-                        <t1 class="small font-weight-bold text-danger">NOTAS
-                          DEL AUTOR</t1>
-                        <b2 href="#">"NO SÉ NADA DE FUTBOL; LOS ARTICULOS SON
-                          INVENTADOS": ADMITE EL AUTOR</b2>
+                        <t1 class="small font-weight-bold text-danger">LIGA MX</t1>
+                        <b2 href="#">CRUZ AZUL ES CAMPEÓN DE LA LIGA MX!!</b2>
                       </div>
                       <div class="col-md-4 col-sm-6 col-6">
-                        <img src="small1.webp" alt="" style="max-height: auto;
+                        <img src="17.jpg" alt="" style="max-height: auto;
                             max-width: 100%;">
                       </div>
                     </div>
@@ -711,14 +717,13 @@
                 <div class="border-bottom border-secondary py-3">
                   <div class="row align-items-center">
                     <div class="col-md-7 col-sm-6 col-6">
-                      <img src="img1.jpg" alt="" style="height: auto;
+                      <img src="2.jpg" alt="" style="height: auto;
                           max-width: 100%;">
                     </div>
                     <div class="col-md-5 col-sm-6 col-6 ">
                       <t1 class="small font-weight-bold text-danger">FUTBOLISTAS
                         HUMILDES</t1>
-                      <b1 href="#">MADRE MIA, EL BICHO. EL BICHO. ¡EL
-                        BICHOOOOO!</b1>
+                      <b1 href="#">UN SIMPLE GESTO, UN VALIOSO MENSAJE</b1> 
                       <span class="badge text-white" style="background-color: #ca0612;">DESTACADO
                       </span>
                     </div>
@@ -728,7 +733,7 @@
                 <div class="row py-3">
                   <div class="col-md-5 col-lg-5">
                     <div class="card border-0 bg-light">
-                      <img class="card-img-top" src="img1.jpg" alt="Card image
+                      <img class="card-img-top" src="3.jpg" alt="Card image
                           cap">
                       <div class="card-body">
                         <t1 class="small font-weight-bold text-danger ">FORMULA 1</t1>
@@ -745,7 +750,7 @@
                             <b2 href="#">EL HIJO DEL BICHO NUNCA HA TOMADO COCA-COLA; SE MANTIENE SIEMPRE SANO</b2>
                           </div>
                           <div class="col-md-4 col-sm-6 col-6">
-                            <img src="small1.webp" alt="" style="max-height:
+                            <img src="5.jpg" alt="" style="max-height:
                                 auto;
                                 max-width: 100%;">
                           </div>
@@ -758,7 +763,7 @@
                             <b2 href="#">¿SIGUE VIVO? ¡MARADONA CAPTADO EN CÁMARAS 2 AÑOS DESPUES DE SU MUERTE!"</b2>
                           </div>
                           <div class="col-md-4 col-sm-6 col-6">
-                            <img src="small1.webp" alt="" style="max-height:
+                            <img src="6.jpg" alt="" style="max-height:
                                 auto;
                                 max-width: 100%;">
                           </div>
@@ -768,10 +773,10 @@
                         <div class="row align-items-center">
                           <div class="col-md-8 col-sm-6 col-6 pr-1">
                             <t1 class="small font-weight-bold text-danger">CONSEJOS PROFESIONALES</t1>
-                            <b2 href="#">"ME TOMO UN CHOCOMILK ANTES DE CADA PARTIDO": LEWANDOSKI NOS CUENTA SUS SECRETOS</b2>
+                            <b2 href="#">LOS MEJOR HÁBITOS SON BEBER AGUA NATURAL TODOS LOS DÍAS Y DORMIR 8 HORAS</b2>
                           </div>
                           <div class="col-md-4 col-sm-6 col-6">
-                            <img src="small1.webp" alt="" style="max-height:
+                            <img src="10.jpg" alt="" style="max-height:
                                 auto;
                                 max-width: 100%;">
                           </div>
@@ -799,7 +804,7 @@
                 <div class="row mb-2">
                   <div class="col-md-4">
                     <div class="card border-0 bg-light ">
-                      <img class="card-img-top" src="img1.jpg" alt="Card image
+                      <img class="card-img-top" src="4.jpg" alt="Card image
                           cap">
                       <div class="card-body">
                         <t1 class="small font-weight-bold text-danger">CONTROVERSIA</t1>
@@ -809,17 +814,17 @@
                   </div>
                   <div class="col-md-4">
                     <div class="card border-0 bg-light">
-                      <img class="card-img-top" src="img1.jpg" alt="Card image
+                      <img class="card-img-top" src="8.jpg" alt="Card image
                           cap">
                       <div class="card-body">
-                        <t1 class="small font-weight-bold text-danger">CONTROVERSIA</t1>
-                        <b2 class="card-text">EL BICHO VS MESSI: ¿QUIEN GANARÍA?</b2>
+                        <t1 class="small font-weight-bold text-danger">FUTBOLISTAS</t1>
+                        <b2 class="card-text">JURGERDAMM ¿FUTURO PRESIDENTE DE MÉXICO?</b2>
                       </div>
                     </div>
                   </div>
                   <div class="col-md-4">
                     <div class="card border-0 bg-light">
-                      <img class="card-img-top" src="img1.jpg" alt="Card image
+                      <img class="card-img-top" src="9.jpg" alt="Card image
                           cap">
                       <div class="card-body">
                         <t1 class="small font-weight-bold text-danger">RUMORES</t1>
@@ -831,7 +836,7 @@
                 <div class="row mb-2">
                   <div class="col-md-4">
                     <div class="card border-0 bg-light">
-                      <img class="card-img-top" src="img1.jpg" alt="Card image
+                      <img class="card-img-top" src="12.jpg" alt="Card image
                           cap">
                       <div class="card-body">
                         <t1 class="small font-weight-bold text-danger">FUTBOLISTAS HUMILDES</t1>
@@ -841,7 +846,7 @@
                   </div>
                   <div class="col-md-4">
                     <div class="card border-0 bg-light">
-                      <img class="card-img-top" src="img1.jpg" alt="Card image
+                      <img class="card-img-top" src="13.jpg" alt="Card image
                           cap">
                       <div class="card-body">
                         <t1 class="small font-weight-bold text-danger">CONSEJOS PROFESIONALES</t1>
@@ -851,7 +856,7 @@
                   </div>
                   <div class="col-md-4">
                     <div class="card border-0 bg-light">
-                      <img class="card-img-top" src="img1.jpg" alt="Card image
+                      <img class="card-img-top" src="14.jpg" alt="Card image
                           cap">
                       <div class="card-body">
                         <t1 class="small font-weight-bold text-danger">SELECCIÓN MEXICANA</t1>
@@ -879,14 +884,13 @@
                 <div class="border-bottom border-secondary py-3">
                   <div class="row align-items-center">
                     <div class="col-md-7 col-sm-6 col-6">
-                      <img src="img1.jpg" alt="" style="height: auto;
+                      <img src="7.jpg" alt="" style="height: auto;
                           max-width: 100%;">
                     </div>
                     <div class="col-md-5 col-sm-6 col-6 ">
                       <t1 class="small font-weight-bold text-danger">FUTBOLISTAS
                         HUMILDES</t1>
-                      <b1 href="#">MADRE MIA, EL BICHO. EL BICHO. ¡EL
-                        BICHOOOOO!</b1>
+                      <b2 href="#">"ME TOMO UN CHOCOMILK ANTES DE CADA PARTIDO": LEWANDOSKI NOS CUENTA SUS SECRETOS</b1>
                     </div>
                   </div>
                 </div>
@@ -894,11 +898,11 @@
                 <div class="row py-3">
                   <div class="col-md-6 col-lg-">
                     <div class="card border-0 bg-light">
-                      <img class="card-img-top" src="img1.jpg" alt="Card image
+                      <img class="card-img-top" src="11.jpg" alt="Card image
                           cap">
                       <div class="card-body">
-                        <t1 class="small font-weight-bold text-danger ">FUTBOLISTAS</t1>
-                        <b2 class="card-text">JURGERDAMM BUSCARÁ LA PRESIDENCIA</b2>
+                        <t1 class="small font-weight-bold text-danger ">FÚTBOL AMERICANO</t1>
+                        <b2 class="card-text">TOM BRADY HACE HISTORIA, OTRA VEZ</b2>
                       </div>
                     </div>
                   </div>
@@ -908,7 +912,7 @@
                           cap">
                       <div class="card-body">
                         <t1 class="small font-weight-bold text-danger ">FUTBOLISTAS HUMILDES</t1>
-                        <b2 class="card-text">MESSI AMENAZA A UN ANCIANITA</b2>
+                        <b2 class="card-text">MESSI NO TIENE PIEDAD CONTRA NADIE</b2>
                       </div>
                     </div>
                   </div>
